--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <script src="lista_infomed_data.js"></script>
   <script src="js/storage.js"></script>
   <script src="js/data.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/app.js?v=20260228"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </body>
 </html>
