Corrige sequência de cores: moderada laranja, ligeira verde

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             'on-primary': '#ffffff',
             'on-secondary': '#ffffff',
             'interaction-grave': '#d32f2f',
-            'interaction-ligeira': '#f9a825',
-            'interaction-moderada': '#2e7d32',
+            'interaction-ligeira': '#2e7d32',
+            'interaction-moderada': '#f9a825',
           },
         },
       },
